--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Trip Starter</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;1,300&family=Source+Serif+Pro:wght@200;300;400&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-   
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>   
-
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/style2.css" />
-
+   <%- include("./partials/head") %>
 
   </head>
   <body>
 
-    <nav class="navbar fixed-top">
+   <nav class="navbar fixed-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#"><div class="img-navbar"><img src="images/logo-nobg.png" width="100%"></div></a>
          
@@ -114,7 +100,7 @@
   
   </div>
   
-  
+   
 
 <section>
   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
@@ -281,30 +267,8 @@
 
 
     </div>
-
-    <footer class="footer row align-items-center">
-      <div class="row ">
-        <div class="contact-us col">
-          <h4>Contactanos/ Soporte:</h4>
-          <p><i class="fas fa-envelope"></i> tripstarter@gmail.com</p>
-          <p><i class="fab fa-whatsapp"></i> +11 3900-7689</p>
-          <a href="#"> <i class="fab fa-youtube"></i> Youtube</a>
-        </div>
-        <div class="payment-methods col">
-          <h4>Metodos de pago:</h4>
-          
-          <img src="\images\1200px-Mastercard_2019_logo.svg.png" width="10%" alt="">
-          <img src="\images\JRsnuWTl_400x400.jpg" width="10%" alt="">
-          <img src="\images\logo-Paypal.png" width="10%" alt="">
-        </div>
-        <div class="partners col">
-          <h4>Partners: </h4> 
-          <a href="https://www.despegar.com.ar">Aerolineas Despegar</a>
-          <a href="https://signaturetours.com.ar">Signature Tours</a> 
-           <a href="https://www.tripadvisor.com/">Tripadvisor</a>  
-        </div>
-      </div>
-    </footer>
+    <!---Footer-->
+    <%- include('./partials/footer')  %> 
 
 
 
