--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -78,6 +78,8 @@ body {
     display: flex;
     flex-wrap: nowrap;
     justify-content:center;
+    display: flex;
+    justify-content: space-around
     
 }
 .text-desktop-btn {
@@ -685,6 +687,7 @@ h1 {
     content: "";
     display: table;
     clear: both;
+    margin: auto;
   }
   
   /* The bar container */
