--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
             <button type="button" class="btn btn-danger btn-sm">Asia</button>
             <button type="button" class="btn btn-warning btn-sm">Europa</button>
           </div> 
-            <div class="col"> <p class="text-desktop-btn"></i> Tu ubicación: Buenos Aires, Argentina <span class="fa fa-star checked"></span> |  Aprovechá 12 cuotas sin interés con tarjeta Mastercard  </p></div>
+            <div class="col"> <p class="text-desktop-btn"></i> Tu ubicación: Buenos Aires, Argentina <span class="fas fa-map-marked-alt"></span> |  Aprovechá 12 cuotas sin interés con tarjeta Mastercard  </p></div>
           
           </div>
           
