--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -5,17 +5,6 @@
   box-sizing: border-box;
 }
 
-/*Estas dos clases son clases y estilos desordenados que sirvieron para
-hacer que el index.ejs deje de poder desplazarse lateralmente*/
-
-.container-fluid {
-  width: 90%;
-}
-
-.row {
-  width: 90%;
-  text-align: center;
-}
 
 @media screen and (max-width: 960px) {
   .col-test {
@@ -142,7 +131,7 @@ body {
 }
 
 .form-login {
-  width: 400px;
+  width: 340px;
   height: 300px;
   background: #4e4d4d;
   margin: auto;
@@ -165,7 +154,7 @@ body {
 }
 
 .form-register {
-  width: 400px;
+  width: 340px;
   height: 420px;
   background: #4e4d4d;
   margin: auto;
@@ -338,7 +327,20 @@ body {
   margin-top: 90px;
 }
 
-/* PRODUCTCART */
+
+
+
+/* PRODUCTCART INICIO*/
+.productcart {
+  margin-top: 120px;
+  width: 40%;
+
+}
+.rowproduct {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 h1 {
   padding: 1.25rem 0;
   text-align: left;
@@ -514,6 +516,195 @@ h1 {
   }
 }
 
+
+.cart{
+  display: flex;
+  margin-left:1.5rem;
+
+}
+.products{
+  flex: 0.75;
+}
+.product{
+  display: inline-flex;
+  flex-direction: row;
+  width:80%;
+  height: 12.5rem;
+  overflow: hidden;
+  border: 1px solid silver;
+  margin-bottom: 0.75rem;
+}
+.product:hover{
+  border: none;
+  box-shadow:  2px 2px 4px rgba(0,0,0,0.2);
+  transform: scale(1.01);
+}
+
+.product > img{
+  width: 18.75rem;
+  height:12.5rem;
+  object-fit: cover ;
+
+  
+}
+.product > img:hover{
+  transform: scale(1.04);
+}
+.product-info{
+  padding: 1.25rem;
+  width: 100%;
+  position: relative;
+}
+.product-name{
+  margin-bottom: 1.25rem;
+}
+.product-eliminar{
+  position: absolute;
+  bottom:1.25rem;
+  right: 1.25rem;
+  padding: 0.625rem 1.56rem;
+  background-color: green;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.product-eliminar:hover{
+  background-color: rgb(224, 24, 24);
+  font-weight: 600;
+
+
+}
+.product-cantidad > input{
+  width: 2.5rem;
+  padding: 0.31rem;
+  text-align: center;
+}
+.fa{
+  margin-right: 0.31rem;
+}
+.cart-total{
+  position: absolute;
+  top:19.5rem;
+  right: 12.5rem;
+  flex:0.25;
+  float: right;
+  margin-left: 1.25rem;
+  padding: 1.25rem; 
+  height: 15rem;
+  border: 1px solid silver;
+  border-radius: 5px;
+  z-index: 100;
+}
+.cart-total p{
+  display: flex;
+  justify-content: space-between;
+   margin-bottom: 1.875rem;
+   font-size: 1.25rem;
+}
+.cart-total a{
+  display: block;
+  text-align: center;
+  height: 2.5rem;
+  line-height: 2.5rem;
+  background-color: rgb(44, 56, 122);
+  color: white;
+  text-decoration: none;
+}
+.cart-total a:hover{
+  background-color: rgb(64, 84, 194);
+}
+
+.button {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.button button {
+  background-color: green;
+  padding: 1rem 1rem;
+  border: 0px solid transparent;
+  border-radius: 5px solid;
+  color: white;
+  width: 6rem;
+  height: 3rem;
+}
+
+.pagoresp {
+  display:none
+}
+.button button:hover {
+  background-color: rgb(177, 59, 59);
+  font-weight: 600;
+
+
+}
+
+
+
+
+
+@media (max-width: 900px){
+
+
+  .product {
+      height: 16rem;
+      width: 100%;
+  }
+  .product img {
+      width: 50%;
+      height: 100%;
+  }
+
+.cart{
+      display: flex;
+  flex-direction: row;
+
+}
+
+.cart-total{
+  margin-left: 0;
+  margin-bottom: 1.25rem;
+
+}
+
+  .cart-total {
+      display:none;
+  }
+
+  button {
+      text-align: center;
+  }
+  .button {
+      margin: 0.5rem 0.5rem;
+      text-align: center;
+  }
+
+  .container {
+      width: 100%;
+  }
+
+  .pagoresp {
+      display:flex;
+      flex-direction: column;
+      border: 1px solid silver;
+      margin-top: 1rem;
+      padding: 0.5rem 0.5rem;
+  }
+
+  .pagbut {
+      background-color: blue;
+      color: white;
+      font-weight: bold ;
+      padding: 0.5rem 0.5rem;
+  }
+
+  
+}
+
+
+
+
+
 /* FIN PRODUCTCART */
 
 /*search box css start here*/
@@ -571,7 +762,105 @@ h1 {
   }
 }
 
-/* PRODUCT DETAIL */
+
+
+
+
+
+/* PRODUCT DETAIL INICIO*/
+
+.main-detail {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+ 
+}
+
+/*Imagen del logo y su respectivo section*/
+.logo-login{
+  width: 50%;
+  margin-top: 10em;
+}
+
+.logo-login img{
+  width: 100%;
+}
+
+/*Section del producto y de su respectivo detalle*/
+.product-detail{
+  display: flex;
+  flex-direction: column;
+  padding-top: 2em;
+}
+.product-detail div{
+  width: 100%;
+}
+/*div de la Imagen del producto*/
+.product-detail .img-container{
+  display: flex;
+  flex-direction: column;    
+}
+.product-detail .img-container h2{
+  margin-bottom: 1em;
+  padding-left: .5em;
+}
+.product-detail .img-container img{
+  width: 90%;
+  margin: auto;
+  align-self: center;
+  border-radius: .4em;
+}
+
+/*Div del detalle del producto*/
+main .product-description{
+  margin-top: 1.5em;
+  width: 90%;
+  align-self: center;
+}
+.product-description p{
+  padding-left: .5em;
+}
+
+.product-description .calification{
+  margin-top: 1em;
+}
+.product-price {
+  margin-top: 1em;
+  width: 30%;
+  padding-left: .5em;
+}
+.product-price h3{
+  padding-left: 1em;
+  width: 30%;
+}
+
+/*Botones*/
+.button-container{
+  margin-top: 1.5em;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+.button-container button{
+  padding: .3em;
+  border-radius: 4px;
+}
+
+/*Media queries*/
+
+@media (min-width:769px){
+  .product-detail{
+      flex-direction: row;
+      flex-wrap: wrap;
+  }
+  .product-detail div{
+      width: 45%;
+  }
+}
+
+
+
 
 /* OPINIONES */
 
@@ -740,3 +1029,21 @@ h1 {
   margin-bottom: 20px;
 }
 /* FIN OPINIONES Y ESTRELLAS*/
+
+/* FIN ESTILOS PRODUCT DETAIL */
+
+
+
+
+/*Estas dos clases son clases y estilos desordenados que sirvieron para
+hacer que el index.ejs deje de poder desplazarse lateralmente*/
+/*
+.container-fluid {
+  width: 90%;
+}
+
+.row {
+  width: 90%;
+  text-align: center;
+}
+*/
