--- a/views/productcart.ejs
+++ b/views/productcart.ejs
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <%-include ("./partials/head") %> 
-    <link rel="stylesheet" href="css/style-carrito.css" />
-    <link rel="stylesheet" href="css/style2.css" />
+    <!--  <link rel="stylesheet" href="css/style-carrito.css" />
+    <link rel="stylesheet" href="css/style2.css" />  -->
   </head>
   <body>
     <header>
@@ -12,7 +12,7 @@
 
     <main>
       <div class="container productcart">
-        <div class="row">
+        <div class="row rowproduct">
             <div class="col-sm-12 col-md-10 col-md-offset-1">
                 <table class="table table-hover">
                     <thead>
