--- a/views/product/productdetail.ejs
+++ b/views/product/productdetail.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <%-include ("./partials/head") %> 
+    <%-include ("../partials/head") %> 
     
   </head>
   <body>
 
     <header>
-      <%-include ("./partials/header") %> 
+      <%-include ("../partials/header") %> 
     </header>
 
     <main>
@@ -18,17 +18,17 @@
         </section> -->
         <section class="product-detail">
           <div class="img-container">
-            <h2>Tour montañas rocosas</h2>
-            <img src="/images/tour-alternativo-3-.jpg" alt="">
+            <h2><%= tour.name %></h2>
+            
+            <img src="/images/<%= tour.image %>" alt="">
+            
           </div>
           <div class="product-description div">
-            <p class="description">Aqui va una descripcion del tour ofecido, con su duracion, lugar, requisitos y beneficios.
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis magni placeat impedit sint architecto, minima iure ullam odio tempore doloremque quibusdam, rem quo expedita aut! Repellat porro quae cumque quos?
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse vero modi odio quibusdam expedita rem dolore architecto minus inventore amet nobis reprehenderit officia ex itaque quas, nesciunt officiis ipsum debitis.
-            </p>
+            <p class="description"> <%= tour.description %> </p>
              </div>
+             
           <div class="product-price div">
-            <h3>$4.000ARS</h3>
+            <h3>$<%= tour.price %> ARS</h3>
           </div>
           <div class="button-container div">
             <button type="submit" class="button">Agregar al carrito</button>
@@ -255,7 +255,7 @@
     </main>  
 
     <footer class="footer row">
-      <%-include ("./partials/footer") %> 
+      <%-include ("../partials/footer") %> 
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
