--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <%-include ("./partials/head") %> 
+    <%-include ("../partials/head") %> 
   </head>
   <body>
 
     <header>
-      <%-include ("./partials/header") %> 
+      <%-include ("../partials/header") %> 
     </header>
     
     <main>
@@ -48,7 +48,7 @@
     </main>
     
     <footer class="footer row">
-      <%-include ("./partials/footer") %> 
+      <%-include ("../partials/footer") %> 
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
